k8s/k8s-deployment-canary.yaml
# k8s/k8s-deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-cv-serve-canary
  namespace: ml
  labels:
    app: medical-cv-serve-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-cv-serve-canary
  template:
    metadata:
      labels:
        app: medical-cv-serve-canary
      # (Optional) Prometheus scraping
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: medical-cv-serve-canary
          image: ghcr.io/tsiraris/medical-cv-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
