k8s/k8s-service.yaml
# Service — gives the pods a stable network endpoint
apiVersion: v1
kind: Service
metadata:
  name: medical-cv-serve
  namespace: ml
spec:
  type: ClusterIP
  selector:
    app: medical-cv-serve  # connects all Pods with this label
  ports:
    - name: http
      port: 80             # Port exposed by the service (inside the cluster)
      targetPort: 8000     # Port inside the container the app listens on
